--- a/.github/workflows/lab1.yml
+++ b/.github/workflows/lab1.yml
@@ -1,33 +1,31 @@
 name: CI Pipeline
+
 on:
   push:
-    branches: [main, master, develop]
+    branches: [ main, master, develop ]
   pull_request:
-    branches: [main, master, develop]
+    branches: [ main, master, develop ]
+
 permissions:
   contents: write
   pages: write
   id-token: write
-jobs:
-  build:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [20]
-        dotnet-version: [8.0]
-    steps:
-      - uses: actions/checkout@v4
 
-      - name: Set up .NET
+jobs:
+  check-lint:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Setup .NET
         uses: actions/setup-dotnet@v4
-        with:
-          dotnet-version: ${{ matrix.dotnet-version }}
 
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: ${{ matrix.node-version }}
-          cache: "npm"
+          node-version: '20'
+          cache: 'npm'
           cache-dependency-path: frontend/package-lock.json
 
       - name: Restore frontend dependencies
@@ -41,14 +39,11 @@ jobs:
         continue-on-error: true
         env:
           ALLURE_RESULTS_DIR: allure-results
-          
+
       - name: Restore .NET dependencies
         working-directory: ./backend
         run: dotnet restore
 
-
-      
-  
       - name: Run backend tests with Allure
         working-directory: ./backend
         run: |
@@ -67,9 +62,11 @@ jobs:
       - name: Collect all Allure results
         run: |
           mkdir -p allure-results
+          # Копируем результаты из frontend
           if [ -d "frontend/allure-results" ]; then
             cp -r frontend/allure-results/* allure-results/ || true
           fi
+          # Копируем результаты из backend (проверяем все возможные места)
           find backend -type d -name "allure-results" -not -path "*/node_modules/*" | while read dir; do
             if [ -d "$dir" ] && [ "$(ls -A $dir 2>/dev/null)" ]; then
               cp -r "$dir"/* allure-results/ || true
@@ -83,6 +80,15 @@ jobs:
         with:
           ref: gh-pages
           path: gh-pages
+
+      - name: Generate Allure Report with history
+        if: always()
+        uses: simple-elf/allure-report-action@master
+        with:
+          allure_results: allure-results
+          allure_report: allure-report
+          gh_pages: gh-pages
+          allure_history: allure-history
 
       - name: Upload Allure Report
         if: always()
